# openvela

./: .gitignore  README.md  a.json  example.db  fluid_result.txt  output.json  pyproject.toml  story.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pypi.yml
.openvela/: agents_info.json  workflow_memory.json
openvela/: __init__.py  __main__.py  agents.py  cli.py  completion.py  files.py  llms.py  logs.py  memory.py  messages.py  prompt.py  runner.py  server.py  tasks.py  tools.py  workflows.py
prompts/: analyzer.json  architect.json  validator.json
tests/: test_hello_world.py  test_selector.py  test_sql_agent.py
vela/: agents.py  logs.py  memory.py
