[tool.poetry]
name = "openvela"
version = "0.3.6" 
description = ""
authors = ["Joel Zamboni <joel.zamboni@webera.com>", "Augusto Izepon <augusto.izepon@webera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.52.1"
ollama = "^0.3.3"
pillow = "^11.0.0"
requests = "^2.32.3"
groq = "^0.11.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[tool.poetry.scripts]
openvela = "openvela.cli:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
